[project]
name = "imputify"
version = "0.1.0"
description = "A comprehensive framework for evaluating missing data imputation methods"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.6.0",
    "keras>=3.9.2",
    "scikit-learn>=1.6.1",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
    "pyampute>=0.0.3",
    "plottable>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/username/imputify"
Issues = "https://github.com/username/imputify/issues"

[tool.pyright]
venvPath = "."
venv = ".venv"
[tool.pyrefly]
